feat: add REST API endpoints for nrdbms createing/list/delete table
